Fix a bug that exits' name are wrapped when they are too long.

--- a/muddery/webclient/css/webclient.css
+++ b/muddery/webclient/css/webclient.css
@@ -1101,6 +1101,7 @@ span.bgblack { background-color: black;}
     text-align: center;
     color: #333;
     font-size: 0.12rem;
+    white-space: nowrap;
     background: no-repeat center;
     background-image: var(--main-exit-button);
     background-size: 100% 100%;
@@ -1117,6 +1118,7 @@ span.bgblack { background-color: black;}
     color: #fff;
     font-size: 0.12rem;
     font-weight: 700;
+    white-space: nowrap;
     background: no-repeat center;
     background-image: var(--main-exit-center);
     background-size: 100% 100%;
